--- a/04ex_Numpy.ipynb
+++ b/04ex_Numpy.ipynb
@@ -19,6 +19,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  1  2  3]\n",
+      " [ 4  5  6  7]\n",
+      " [ 8  9 10 11]]\n",
+      "[4. 5. 6. 7.]\n",
+      "[1.5 5.5 9.5]\n",
+      "5.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "m = np.arange(12).reshape((3,4))\n",
+    "print(m)\n",
+    "print(np.average(m, axis = 0))\n",
+    "print(np.average(m, axis = 1))\n",
+    "print(np.average(m))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -37,12 +65,110 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2  4  6  8]\n",
+      " [ 6 12 18 24]\n",
+      " [10 20 30 40]\n",
+      " [14 28 42 56]]\n",
+      "[1]\n",
+      "[ 2  4  6  8  6 12 18 24 10 20 30 40 14 28 42 56]\n",
+      "[1 3 5 7] [1 3 5 7]\n",
+      "[[1 3 5 7]] [[1]\n",
+      " [3]\n",
+      " [5]\n",
+      " [7]]\n",
+      "[[ 2  4  6  8]\n",
+      " [ 6 12 18 24]\n",
+      " [10 20 30 40]\n",
+      " [14 28 42 56]]\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "shapes (4,1) and (4,) not aligned: 1 (dim 1) != 4 (dim 0)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [84], line 17\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28mprint\u001b[39m(u, u\u001b[38;5;241m.\u001b[39mT)\n\u001b[1;32m     16\u001b[0m \u001b[38;5;28mprint\u001b[39m(u\u001b[38;5;241m.\u001b[39mT \u001b[38;5;241m*\u001b[39m v)\n\u001b[0;32m---> 17\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdot\u001b[49m\u001b[43m(\u001b[49m\u001b[43mu\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mT\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mv\u001b[49m\u001b[43m)\u001b[49m)\n",
+      "File \u001b[0;32m<__array_function__ internals>:5\u001b[0m, in \u001b[0;36mdot\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: shapes (4,1) and (4,) not aligned: 1 (dim 1) != 4 (dim 0)"
+     ]
+    }
+   ],
+   "source": [
+    "u = np.array([1,3,5,7])\n",
+    "v = np.array([2,4,6,8])\n",
+    "\n",
+    "print(np.outer(u,v))\n",
+    "\n",
+    "print(np.array([(i*j) for i in range(1,2) for j in range(1,2)])) #???????????\n",
+    "\n",
+    "print(np.array([(i*j) for i in u for j in v]))\n",
+    "\n",
+    "\n",
+    "print(u, u.T)\n",
+    "\n",
+    "u = u.reshape(1,-1)\n",
+    "print(u, u.T)\n",
+    "\n",
+    "print(u.T * v)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "3\\. Create a 10 by 6 matrix of random uniform numbers. Set all rows with any entry less than 0.1 to be zero\n",
     "\n",
     "Hint: Use the following numpy functions - np.random.random, np.any as well as Boolean indexing and the axis argument."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.17666591 0.34515128 0.59884435 0.99845709 0.17023465 0.70631555]\n",
+      " [0.9165108  0.36628587 0.29688205 0.90848532 0.9856758  0.08696166]\n",
+      " [0.56526724 0.17299564 0.78209459 0.65403106 0.0366331  0.61871333]\n",
+      " [0.17061883 0.49858537 0.07664436 0.10344519 0.83687047 0.28630515]\n",
+      " [0.23204666 0.00951789 0.10528451 0.24098467 0.02300378 0.50563177]\n",
+      " [0.58553833 0.0577481  0.65603683 0.81597353 0.73624    0.79689764]\n",
+      " [0.69256488 0.40022205 0.59750778 0.60161199 0.54956295 0.13254052]\n",
+      " [0.90103647 0.15422063 0.7378557  0.84257597 0.4699179  0.1078784 ]\n",
+      " [0.4146879  0.62395042 0.45239262 0.76113141 0.56399928 0.02271126]\n",
+      " [0.4740952  0.95272229 0.53675778 0.21274728 0.93437882 0.72922687]]\n",
+      "[[0.17666591 0.34515128 0.59884435 0.99845709 0.17023465 0.70631555]\n",
+      " [0.9165108  0.36628587 0.29688205 0.90848532 0.9856758  0.        ]\n",
+      " [0.56526724 0.17299564 0.78209459 0.65403106 0.         0.61871333]\n",
+      " [0.17061883 0.49858537 0.         0.10344519 0.83687047 0.28630515]\n",
+      " [0.23204666 0.         0.10528451 0.24098467 0.         0.50563177]\n",
+      " [0.58553833 0.         0.65603683 0.81597353 0.73624    0.79689764]\n",
+      " [0.69256488 0.40022205 0.59750778 0.60161199 0.54956295 0.13254052]\n",
+      " [0.90103647 0.15422063 0.7378557  0.84257597 0.4699179  0.1078784 ]\n",
+      " [0.4146879  0.62395042 0.45239262 0.76113141 0.56399928 0.        ]\n",
+      " [0.4740952  0.95272229 0.53675778 0.21274728 0.93437882 0.72922687]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "matrix = np.random.rand(10,6)\n",
+    "print(matrix)\n",
+    "\n",
+    "x = matrix > 0.1\n",
+    "print(matrix * x)"
    ]
   },
   {
@@ -55,6 +181,126 @@
     "  * Reverse the array using slice notation\n",
     "  * Extract elements where the absolute difference between the sine and cosine functions evaluated at that element is less than 0.1\n",
     "  * Make a plot showing the sin and cos functions and indicate where they are close"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.         0.06346652 0.12693304 0.19039955 0.25386607 0.31733259\n",
+      " 0.38079911 0.44426563 0.50773215 0.57119866 0.63466518 0.6981317\n",
+      " 0.76159822 0.82506474 0.88853126 0.95199777 1.01546429 1.07893081\n",
+      " 1.14239733 1.20586385 1.26933037 1.33279688 1.3962634  1.45972992\n",
+      " 1.52319644 1.58666296 1.65012947 1.71359599 1.77706251 1.84052903\n",
+      " 1.90399555 1.96746207 2.03092858 2.0943951  2.15786162 2.22132814\n",
+      " 2.28479466 2.34826118 2.41172769 2.47519421 2.53866073 2.60212725\n",
+      " 2.66559377 2.72906028 2.7925268  2.85599332 2.91945984 2.98292636\n",
+      " 3.04639288 3.10985939 3.17332591 3.23679243 3.30025895 3.36372547\n",
+      " 3.42719199 3.4906585  3.55412502 3.61759154 3.68105806 3.74452458\n",
+      " 3.8079911  3.87145761 3.93492413 3.99839065 4.06185717 4.12532369\n",
+      " 4.1887902  4.25225672 4.31572324 4.37918976 4.44265628 4.5061228\n",
+      " 4.56958931 4.63305583 4.69652235 4.75998887 4.82345539 4.88692191\n",
+      " 4.95038842 5.01385494 5.07732146 5.14078798 5.2042545  5.26772102\n",
+      " 5.33118753 5.39465405 5.45812057 5.52158709 5.58505361 5.64852012\n",
+      " 5.71198664 5.77545316 5.83891968 5.9023862  5.96585272 6.02931923\n",
+      " 6.09278575 6.15625227 6.21971879 6.28318531] \n",
+      "\n",
+      "[0.         0.06346652 0.12693304 0.19039955 0.25386607 0.31733259\n",
+      " 0.38079911 0.44426563 0.50773215 0.57119866] \n",
+      "\n",
+      "[6.28318531 6.21971879 6.15625227 6.09278575 6.02931923 5.96585272\n",
+      " 5.9023862  5.83891968 5.77545316 5.71198664 5.64852012 5.58505361\n",
+      " 5.52158709 5.45812057 5.39465405 5.33118753 5.26772102 5.2042545\n",
+      " 5.14078798 5.07732146 5.01385494 4.95038842 4.88692191 4.82345539\n",
+      " 4.75998887 4.69652235 4.63305583 4.56958931 4.5061228  4.44265628\n",
+      " 4.37918976 4.31572324 4.25225672 4.1887902  4.12532369 4.06185717\n",
+      " 3.99839065 3.93492413 3.87145761 3.8079911  3.74452458 3.68105806\n",
+      " 3.61759154 3.55412502 3.4906585  3.42719199 3.36372547 3.30025895\n",
+      " 3.23679243 3.17332591 3.10985939 3.04639288 2.98292636 2.91945984\n",
+      " 2.85599332 2.7925268  2.72906028 2.66559377 2.60212725 2.53866073\n",
+      " 2.47519421 2.41172769 2.34826118 2.28479466 2.22132814 2.15786162\n",
+      " 2.0943951  2.03092858 1.96746207 1.90399555 1.84052903 1.77706251\n",
+      " 1.71359599 1.65012947 1.58666296 1.52319644 1.45972992 1.3962634\n",
+      " 1.33279688 1.26933037 1.20586385 1.14239733 1.07893081 1.01546429\n",
+      " 0.95199777 0.88853126 0.82506474 0.76159822 0.6981317  0.63466518\n",
+      " 0.57119866 0.50773215 0.44426563 0.38079911 0.31733259 0.25386607\n",
+      " 0.19039955 0.12693304 0.06346652 0.        ] \n",
+      "\n",
+      "[ 0.00000000e+00  6.34239197e-02  1.26592454e-01  1.89251244e-01\n",
+      "  2.51147987e-01  3.12033446e-01  3.71662456e-01  4.29794912e-01\n",
+      "  4.86196736e-01  5.40640817e-01  5.92907929e-01  6.42787610e-01\n",
+      "  6.90079011e-01  7.34591709e-01  7.76146464e-01  8.14575952e-01\n",
+      "  8.49725430e-01  8.81453363e-01  9.09631995e-01  9.34147860e-01\n",
+      "  9.54902241e-01  9.71811568e-01  9.84807753e-01  9.93838464e-01\n",
+      "  9.98867339e-01  9.99874128e-01  9.96854776e-01  9.89821442e-01\n",
+      "  9.78802446e-01  9.63842159e-01  9.45000819e-01  9.22354294e-01\n",
+      "  8.95993774e-01  8.66025404e-01  8.32569855e-01  7.95761841e-01\n",
+      "  7.55749574e-01  7.12694171e-01  6.66769001e-01  6.18158986e-01\n",
+      "  5.67059864e-01  5.13677392e-01  4.58226522e-01  4.00930535e-01\n",
+      "  3.42020143e-01  2.81732557e-01  2.20310533e-01  1.58001396e-01\n",
+      "  9.50560433e-02  3.17279335e-02 -3.17279335e-02 -9.50560433e-02\n",
+      " -1.58001396e-01 -2.20310533e-01 -2.81732557e-01 -3.42020143e-01\n",
+      " -4.00930535e-01 -4.58226522e-01 -5.13677392e-01 -5.67059864e-01\n",
+      " -6.18158986e-01 -6.66769001e-01 -7.12694171e-01 -7.55749574e-01\n",
+      " -7.95761841e-01 -8.32569855e-01 -8.66025404e-01 -8.95993774e-01\n",
+      " -9.22354294e-01 -9.45000819e-01 -9.63842159e-01 -9.78802446e-01\n",
+      " -9.89821442e-01 -9.96854776e-01 -9.99874128e-01 -9.98867339e-01\n",
+      " -9.93838464e-01 -9.84807753e-01 -9.71811568e-01 -9.54902241e-01\n",
+      " -9.34147860e-01 -9.09631995e-01 -8.81453363e-01 -8.49725430e-01\n",
+      " -8.14575952e-01 -7.76146464e-01 -7.34591709e-01 -6.90079011e-01\n",
+      " -6.42787610e-01 -5.92907929e-01 -5.40640817e-01 -4.86196736e-01\n",
+      " -4.29794912e-01 -3.71662456e-01 -3.12033446e-01 -2.51147987e-01\n",
+      " -1.89251244e-01 -1.26592454e-01 -6.34239197e-02 -2.44929360e-16] \n",
+      " [ 0.00000000e+00  6.34239197e-02  1.26592454e-01  1.89251244e-01\n",
+      "  2.51147987e-01  3.12033446e-01  3.71662456e-01  4.29794912e-01\n",
+      "  4.86196736e-01  5.40640817e-01  5.92907929e-01  6.42787610e-01\n",
+      "  6.90079011e-01  7.34591709e-01  7.76146464e-01  8.14575952e-01\n",
+      "  8.49725430e-01  8.81453363e-01  9.09631995e-01  9.34147860e-01\n",
+      "  9.54902241e-01  9.71811568e-01  9.84807753e-01  9.93838464e-01\n",
+      "  9.98867339e-01  9.99874128e-01  9.96854776e-01  9.89821442e-01\n",
+      "  9.78802446e-01  9.63842159e-01  9.45000819e-01  9.22354294e-01\n",
+      "  8.95993774e-01  8.66025404e-01  8.32569855e-01  7.95761841e-01\n",
+      "  7.55749574e-01  7.12694171e-01  6.66769001e-01  6.18158986e-01\n",
+      "  5.67059864e-01  5.13677392e-01  4.58226522e-01  4.00930535e-01\n",
+      "  3.42020143e-01  2.81732557e-01  2.20310533e-01  1.58001396e-01\n",
+      "  9.50560433e-02  3.17279335e-02 -3.17279335e-02 -9.50560433e-02\n",
+      " -1.58001396e-01 -2.20310533e-01 -2.81732557e-01 -3.42020143e-01\n",
+      " -4.00930535e-01 -4.58226522e-01 -5.13677392e-01 -5.67059864e-01\n",
+      " -6.18158986e-01 -6.66769001e-01 -7.12694171e-01 -7.55749574e-01\n",
+      " -7.95761841e-01 -8.32569855e-01 -8.66025404e-01 -8.95993774e-01\n",
+      " -9.22354294e-01 -9.45000819e-01 -9.63842159e-01 -9.78802446e-01\n",
+      " -9.89821442e-01 -9.96854776e-01 -9.99874128e-01 -9.98867339e-01\n",
+      " -9.93838464e-01 -9.84807753e-01 -9.71811568e-01 -9.54902241e-01\n",
+      " -9.34147860e-01 -9.09631995e-01 -8.81453363e-01 -8.49725430e-01\n",
+      " -8.14575952e-01 -7.76146464e-01 -7.34591709e-01 -6.90079011e-01\n",
+      " -6.42787610e-01 -5.92907929e-01 -5.40640817e-01 -4.86196736e-01\n",
+      " -4.29794912e-01 -3.71662456e-01 -3.12033446e-01 -2.51147987e-01\n",
+      " -1.89251244e-01 -1.26592454e-01 -6.34239197e-02 -2.44929360e-16\n",
+      "  1.00000000e+00]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "m = np.linspace(0, 2*math.pi, 100)\n",
+    "print(m, \"\\n\")\n",
+    "\n",
+    "print(m[:10:], \"\\n\")\n",
+    "\n",
+    "print(m[::-1], \"\\n\")\n",
+    "\n",
+    "s = np.array([])\n",
+    "c = np.array([])\n",
+    "for i in range(len(m)):\n",
+    "    s = np.append(s, math.sin(m[i]))\n",
+    "    c = np.append(s, math.cos(m[i]))\n",
+    "print(s, \"\\n\", c)\n"
    ]
   },
   {
@@ -156,7 +402,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
